--- a/README
+++ b/README
@@ -24,7 +24,7 @@ R file, we need to provide the following information about the studied quantitat
 # sd_trait: standard deviation of the studied quantitative trait
 # thres_raw: cut-off for the clincially-defined categories
 # eaf: effect allele frequency
-# rank_normalized_y: normalization status of the studied quantitative trait
+# rank_normalized_y: normalized the studied quantitative trait
 
 
 
