--- a/README
+++ b/README
@@ -29,9 +29,9 @@ quantitative trait:
 # se_cont: se derived from linear regression
 # mean_trait: mean value of the studied quantitative trait
 # sd_trait: standard deviation of the studied quantitative trait
-# thres_raw: cut-off for the clincially-defined categories
+# thres_raw: cut-off for the studied quantitative trait (in original scale; not standardized) 
 # eaf: effect allele frequency
-# rank_normalized_y: normalized the studied quantitative trait
+# standardized_y: TRUE/FALSE; does the GWAS summary statistics refer to a quantitative trait already standardized?
 
 
 
