--- a/README
+++ b/README
@@ -27,9 +27,9 @@ quantitative trait:
 # Description of input parameters
 # beta_cont: beta derived from linear regression
 # se_cont: se derived from linear regression
-# mean_trait: mean value of the studied quantitative trait
-# sd_trait: standard deviation of the studied quantitative trait
-# thres_raw: cut-off for the studied quantitative trait (in original scale; not standardized) 
+# mean_trait: mean value of the studied quantitative trait  (in original scale)
+# sd_trait: standard deviation of the studied quantitative trait (in original scale)
+# thres_raw: cut-off for the studied quantitative trait (in original scale)
 # eaf: effect allele frequency
 # standardized_y: TRUE/FALSE; does the GWAS summary statistics refer to a quantitative trait already standardized?
 
